Added app Executable file creator
More information about building and installing the app will be explained
in the README